--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: 'Information about a perl module distribution'
 author:
   - 'Randy Stauner <rwstauner@cpan.org>'
 build_requires:
+  File::Spec: 0
   Module::Build: 0.3601
   Test::Fatal: 0
   Test::MockObject: 1.09
@@ -10,7 +11,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200007, CPAN::Meta::Converter version 2.110930'
+generated_by: 'Dist::Zilla version 4.200008, CPAN::Meta::Converter version 2.110930'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -32,19 +33,19 @@ no_index:
 provides:
   Dist::Metadata:
     file: lib/Dist/Metadata.pm
-    version: 0.904
+    version: 0.910
   Dist::Metadata::Dir:
     file: lib/Dist/Metadata/Dir.pm
-    version: 0.904
+    version: 0.910
   Dist::Metadata::Dist:
     file: lib/Dist/Metadata/Dist.pm
-    version: 0.904
+    version: 0.910
   Dist::Metadata::Struct:
     file: lib/Dist/Metadata/Struct.pm
-    version: 0.904
+    version: 0.910
   Dist::Metadata::Tar:
     file: lib/Dist/Metadata/Tar.pm
-    version: 0.904
+    version: 0.910
 requires:
   Archive::Tar: 0
   CPAN::Meta: 2.1
@@ -52,11 +53,11 @@ requires:
   File::Basename: 0
   File::Find: 0
   File::Path: 0
-  File::Spec: 0
-  File::Spec::Unix: 0
+  File::Spec::Native: 1.002
   File::Temp: 0.19
   List::Util: 0
   Module::Metadata: 0
+  Path::Class: 0.24
   Try::Tiny: 0.09
   constant: 0
   parent: 0
@@ -65,7 +66,7 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Dist-Metadata
   homepage: http://github.com/magnificent-tears/Dist-Metadata
   repository: http://github.com/magnificent-tears/Dist-Metadata
-version: 0.904
+version: 0.910
 x_Dist_Zilla:
   plugins:
     -
@@ -75,27 +76,27 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GenerateFile
       name: '@Author::RWSTAUNER/GenerateManifestSkip'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Author::RWSTAUNER/GatherDir'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::RWSTAUNER/PruneCruft'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::RWSTAUNER/ManifestSkip'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::PruneFiles
       name: '@Author::RWSTAUNER/PruneBuilderFiles'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::PruneFiles
       name: '@Author::RWSTAUNER/PruneRepoMetaFiles'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::Authority
       name: '@Author::RWSTAUNER/Authority'
@@ -103,11 +104,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: '@Author::RWSTAUNER/NextRelease'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Author::RWSTAUNER/PkgVersion'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::Prepender
       name: '@Author::RWSTAUNER/Prepender'
@@ -119,11 +120,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::RWSTAUNER/License'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Author::RWSTAUNER/Readme'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::Bugtracker
       name: '@Author::RWSTAUNER/Bugtracker'
@@ -135,15 +136,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Author::RWSTAUNER/GithubMeta'
-      version: 0.12
+      version: 0.14
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: '@Author::RWSTAUNER/AutoPrereqs'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::MetaNoIndex
       name: '@Author::RWSTAUNER/MetaNoIndex'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
       name: '@Author::RWSTAUNER/MetaProvides::Package'
@@ -155,15 +156,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::RWSTAUNER/MetaConfig'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::RWSTAUNER/MetaYAML'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::RWSTAUNER/MetaJSON'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -171,23 +172,23 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: '@Author::RWSTAUNER/TestMoreWithSubtests'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::RWSTAUNER/ExecDir'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Author::RWSTAUNER/ShareDir'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Author::RWSTAUNER/MakeMaker'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::ModuleBuild
       name: '@Author::RWSTAUNER/ModuleBuild'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::DualBuilders
       name: '@Author::RWSTAUNER/DualBuilders'
@@ -195,7 +196,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::ReportVersions::Tiny
       name: '@Author::RWSTAUNER/ReportVersions::Tiny'
-      version: 1.03
+      version: 1.03_01
     -
       class: Dist::Zilla::Plugin::PodSpellingTests
       name: '@Author::RWSTAUNER/PodSpellingTests'
@@ -211,7 +212,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: '@Author::RWSTAUNER/@TestingMania/PodCoverageTests'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::CompileTests
       name: '@Author::RWSTAUNER/@TestingMania/CompileTests'
@@ -223,7 +224,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::MetaTests
       name: '@Author::RWSTAUNER/@TestingMania/MetaTests'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::KwaliteeTests
       name: '@Author::RWSTAUNER/@TestingMania/KwaliteeTests'
@@ -267,11 +268,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::RWSTAUNER/@TestingMania/PodSyntaxTests'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::RWSTAUNER/Manifest'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::CheckExtraTests
       name: '@Author::RWSTAUNER/CheckExtraTests'
@@ -283,15 +284,15 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::RWSTAUNER/TestRelease'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::RWSTAUNER/ConfirmRelease'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::RWSTAUNER/UploadToCPAN'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Author::RWSTAUNER/@Git/Check'
@@ -319,7 +320,7 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::Run::BeforeBuild
       name: Run::BeforeBuild
@@ -327,30 +328,30 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.200007
+      version: 4.200008
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.200007
+      version: 4.200008
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.200007
+    version: 4.200008
 x_authority: cpan:RWSTAUNER
