--- a/META.yml
+++ b/META.yml
@@ -33,19 +33,19 @@ no_index:
 provides:
   Dist::Metadata:
     file: lib/Dist/Metadata.pm
-    version: 0.910
+    version: 0.911
   Dist::Metadata::Dir:
     file: lib/Dist/Metadata/Dir.pm
-    version: 0.910
+    version: 0.911
   Dist::Metadata::Dist:
     file: lib/Dist/Metadata/Dist.pm
-    version: 0.910
+    version: 0.911
   Dist::Metadata::Struct:
     file: lib/Dist/Metadata/Struct.pm
-    version: 0.910
+    version: 0.911
   Dist::Metadata::Tar:
     file: lib/Dist/Metadata/Tar.pm
-    version: 0.910
+    version: 0.911
 requires:
   Archive::Tar: 0
   CPAN::Meta: 2.1
@@ -66,7 +66,7 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Dist-Metadata
   homepage: http://github.com/magnificent-tears/Dist-Metadata
   repository: http://github.com/magnificent-tears/Dist-Metadata
-version: 0.910
+version: 0.911
 x_Dist_Zilla:
   plugins:
     -
@@ -193,10 +193,6 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::DualBuilders
       name: '@Author::RWSTAUNER/DualBuilders'
       version: 1.001
-    -
-      class: Dist::Zilla::Plugin::ReportVersions::Tiny
-      name: '@Author::RWSTAUNER/ReportVersions::Tiny'
-      version: 1.03_01
     -
       class: Dist::Zilla::Plugin::PodSpellingTests
       name: '@Author::RWSTAUNER/PodSpellingTests'
@@ -325,6 +321,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Run::BeforeBuild
       name: Run::BeforeBuild
       version: 0.006
+    -
+      class: Dist::Zilla::Plugin::ReportVersions::Tiny
+      name: ReportVersions::Tiny
+      version: 1.03_01
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
